# Flag-frenzy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: bot.rs  client.rs  server.rs  shared.rs
